--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>[Projectnaam] - Styleguide</title>
     <link rel="stylesheet" href="index.css">
-    <link rel="stylesheet" href="styleguide.css">
+    <link rel="stylesheet" href="styleguide-snappthis.css">
   </head>
   <body>
 
     <header>
-      <h1>[Projectnaam] - Styleguide</h1>
+      <h1>SnappThis - Styleguide</h1>
       <p>Dit is de styleguide voor het project [Projectnaam]. Hierin zijn een aantal huisstijl onderdelen gedefinieerd.</p>
       <p>Gebruik de volgende gedeelde stylesheet binnen je eigen project:
         <!-- Pas deze aan zodra deze repository live staat op GitHub Pages -->
