Change link to stylesheet

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
       <p>Dit is de styleguide voor het project SnappThis. Hierin zijn een aantal huisstijl onderdelen gedefinieerd.</p>
       <p>Gebruik de volgende gedeelde stylesheet binnen je eigen project:
         <!-- Pas deze aan zodra deze repository live staat op GitHub Pages -->
-         <a href="https://hebaahx.github.io/look-and-feel-styleguide/" target="_blank">
-          https://hebaahx.github.io/look-and-feel-styleguide/
+         <a href="https://hebaahx.github.io/look-and-feel-styleguide/styleguide-snappthis.css" target="_blank">
+         https://hebaahx.github.io/look-and-feel-styleguide/styleguide-snappthis.css
          </a>
         
 
