#9 tags correct afgesloten na feedback

--- a/index.html
+++ b/index.html
@@ -8,23 +8,22 @@
     <link rel="stylesheet" href="styleguide-snappthis.css">
   </head>
 
-
+  <body>
+    
     <header>
       <h1>SnappThis - Styleguide</h1>
       <p>Dit is de styleguide voor het project SnappThis. Hierin zijn een aantal huisstijl onderdelen gedefinieerd.</p>
-      <p>Gebruik de volgende gedeelde stylesheet binnen je eigen project:
-        <!-- Pas deze aan zodra deze repository live staat op GitHub Pages -->
+      <p>Via deze link kun je onze stylesheet bekijken:
          <a href="https://hebaahx.github.io/look-and-feel-styleguide/styleguide-snappthis.css" target="_blank">
-         https://hebaahx.github.io/look-and-feel-styleguide/styleguide-snappthis.css
-         </a>
-        
-
-
+            https://hebaahx.github.io/look-and-feel-styleguide/styleguide-snappthis.css
+         </a>  
+      </p>
+    </header>
 
     <section id="kleur">
 
       <h2>Kleuren</h2>
-      <p>Bij het onderdeel kleuren staat het kleurgebruik.</p>
+      <p>Dit zijn de kleuren waarvan wij gebruik maken :</p>
 
       <figure>
         <code class="primary-color"></code>
@@ -51,7 +50,12 @@
         <figcaption>#E9ECEE</figcaption>
       </figure>
 
-    </section>
+    </section> <!-- einde Kleuren -->
+
+
+<!-- Typografie -->
+    <section id="typografie">
+
       <h2>Typografie</h2>
       <p>Bij het onderdeel typografie worden fonts en groottes gedemonstreerd.</p>
 
@@ -129,7 +133,6 @@
 
     </section>
 
-
     <section id="formulieren">
 
       <h2>Formulier elementen</h2>
@@ -184,7 +187,7 @@
           </label>
 
           <label class="">
-            <input type="checkbox" name="chekcbox-3" class="">
+            <input type="checkbox" name="checkbox-3" class="">
             Checkbox 3
           </label>
         </fieldset>
